# tender

./: .gitattributes  .gitignore  Anchor.toml  LICENSE  README.md  biome.json  brand.md  package.json  pitch-deck.html  pnpm-lock.yaml  pnpm-workspace.yaml  tender.qedspec  tsconfig.base.json  turbo.json
.github/workflows/: build-ai-sidecar.yml  ci.yml  qedgen-verify.yml
.qed/: config.json
apps/ai-sidecar/: .dockerignore  Dockerfile  README.md  nosana-job.json  package.json  qvac.config.json
apps/ai-sidecar/src/: index.ts
apps/ai-sidecar/src/routes/: draft.ts  evaluate.ts  health.ts  ocr.ts  translate.ts
apps/web/: .env.example  README.md  next.config.ts  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/docs/: page.tsx
apps/web/app/leaderboard/: page.tsx
apps/web/components/: buffer-polyfill-provider.tsx  client-only.tsx  local-time.tsx
apps/web/components/ai/: ai-bid-comparison-panel.tsx  ai-draft-modal.tsx  thinking-indicator.tsx
apps/web/components/dashboard/: bidding-grid.tsx  buying-grid.tsx  dashboard-shell.tsx  my-activity-count.tsx  sync-indicator.tsx
apps/web/components/docs/: markdown.tsx
apps/web/components/effects/: dot-matrix.tsx
apps/web/components/escrow/: bid-detail-drawer.tsx  buyer-action-panel.tsx  buyer-bid-decryption-panel.tsx  confirm-dialogs.tsx  expire-rfp-panel.tsx  milestone-notes-thread.tsx  provider-action-panel.tsx  winner-bid-decrypt-banner.tsx  winning-bid-panel.tsx
apps/web/components/identity/: claim-identity-modal.tsx  identity-modal-provider.tsx
apps/web/components/landing/: how-it-works.tsx
apps/web/components/leaderboard/: leaderboard-tables.tsx
apps/web/components/me/: hd-projects.tsx
apps/web/components/motion/: hover-card.tsx  page-transition.tsx  reveal-glow.tsx  stagger.tsx
apps/web/components/nav/: mobile-nav.tsx  nav-links.tsx  powered-by-logos.tsx  site-footer.tsx  tender-mark.tsx  tendr-mark.tsx  theme-toggle.tsx  top-nav.tsx  wallet-nav-button.tsx
apps/web/components/primitives/: data-field.tsx  (+8 more)
apps/web/scripts/: cleanup-orphan-bid.mjs  delete-tendr-subdomain.mjs  init-treasury.mjs  load-test-keychain-enumerate.mjs  register-tendr-devnet.mjs  test-sns-devnet-adapter.mts
docs/: PRIVACY-MODEL.md  ai.md  faq.md  identity.md  lifecycle.md  privacy-model.md  qedgen-pr2-overnight-report.md  reputation-model.md
formal_verification/: Proofs.lean  Spec.lean  drift-attributes.txt  lake-manifest.json  lakefile.lean
programs/tender/: Cargo.toml
programs/tender/src/: errors.rs  lib.rs
programs/tender/src/instructions/: accept_milestone.rs  attest_buyer_history.rs  attest_win.rs  auto_release_milestone.rs  bid_commit.rs  bid_withdraw.rs  cancel_late_milestone.rs  cancel_with_notice.rs  cancel_with_penalty.rs  close_withdrawn_bid.rs  commit_bid.rs  commit_bid_init.rs  delegate_bid.rs  dispute_default_split.rs  expire_rfp.rs  finalize_bid.rs  fund_project.rs  init_treasury.rs  mark_buyer_ghosted.rs  mod.rs  open_reveal_window.rs  reject_milestone.rs  request_changes.rs  resolve_dispute.rs  reveal_reserve.rs  rfp_close_bidding.rs  rfp_create.rs  select_bid.rs  start_milestone.rs  submit_milestone.rs  withdraw_bid.rs  write_bid_chunk.rs
programs/tender/src/state/: bid.rs  escrow.rs  milestone.rs  mod.rs  reputation.rs  rfp.rs  treasury.rs
programs/tender/tests/: cover_paths.rs  cover_paths_attest.rs  cover_paths_extended.rs  cover_paths_withdraw.rs  kani_invariants.rs  litesvm_state.rs  proptest.proptest-regressions  proptest.rs  spl_helpers.rs
scripts/: qedgen-post-codegen.py
supabase/migrations/: 0001_initial.sql  0002_rls.sql  0003_bid_ciphertexts.sql  0004_add_provider_ciphertext.sql  0005_per_storage_and_l1.sql  0006_chain_is_source_of_truth.sql  0007_drop_dead_columns.sql  0008_milestone_notes.sql
tests/litesvm/: package.json  tsconfig.json
tests/litesvm/src/: bid.test.ts  rfp.test.ts  select.test.ts  setup.ts
(+139 files in other folders)
