[package]
name = "tender"
version = "0.0.1"
description = "Tender - sealed-bid procurement, escrow, and on-chain reputation registry"
edition = "2021"
license = "MIT"
repository = "https://github.com/0xharp/tender"

[lib]
crate-type = ["cdylib", "lib"]
name = "tender"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
ephemeral-rollups-sdk = { version = "0.11.2", features = ["anchor", "disable-realloc", "access-control"] }
solana-hash = "2.3"
solana-sha256-hasher = { version = "2.3", features = ["sha2"] }
ed25519-dalek = "2.0"

[dev-dependencies]
litesvm = "0.7"
solana-sdk = "2"
solana-program = "2"
solana-sha256-hasher = { version = "2.3", features = ["sha2"] }
