[package]
name = "tender"
version = "0.0.1"
description = "Tender - sealed-bid procurement, escrow, and on-chain reputation registry"
edition = "2021"
license = "MIT"
repository = "https://github.com/0xharp/tender"

[lib]
crate-type = ["cdylib", "lib"]
name = "tender"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
ephemeral-rollups-sdk = { version = "0.11.2", features = ["anchor", "disable-realloc", "access-control"] }
solana-hash = "2.3"
solana-sha256-hasher = { version = "2.3", features = ["sha2"] }
ed25519-dalek = "2.0"

# Compile-time drift gate for the formal-verification spec at ../../tender.qedspec.
# Each handler in src/instructions/<name>.rs carries one or more `#[qed(verified, ...)]`
# attributes that re-hash the function body and the matching spec block at compile time.
# Mismatch fires `compile_error!` — handler bodies cannot drift from the spec without
# explicit re-stamping via `qedgen reconcile --update-hashes`.
#
# Pinned to upstream release v2.22.0 — includes the three kani-codegen fixes from
# PR #46 (effect-conformance binder, mul_div inline, type-aware seed init) plus the
# Pubkey state-field lowering from v2.21 S3.
qedgen-macros = { git = "https://github.com/QEDGen/solana-skills", tag = "v2.22.0" }

[dev-dependencies]
litesvm = "0.7"
solana-sdk = "2"
solana-program = "2"
solana-sha256-hasher = { version = "2.3", features = ["sha2"] }


# Phase 5 — verification tiers
# proptest: required by qedgen's auto-generated harness at tests/proptest.rs.
# Auto-regen via `qedgen codegen --proptest`; do not hand-edit.
proptest = "1"
# SPL token + ed25519-dalek for extended litesvm cover paths (Phase 2).
# `no-entrypoint` features disable the program-entrypoint symbol on the SPL
# crates so they can be linked as libraries alongside the tender program
# (each Solana program defines an `entrypoint` symbol; without disabling,
# linking multiple program crates into one test binary collides).
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3", features = ["no-entrypoint"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
